--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <li><a href="https://github.com/abobija" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/bobija" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.youtube.com/scrollerscroller" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="https://gitlab.com/a.bobija" target="_blank"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -90,16 +91,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="progress-wrapper">
-
-                            <h3>CODING SKILLS</h3>
-
                             <div class="progress-item">
-                                <span class="progress-title">HTML5</span>
+                                <span class="progress-title">C / C++</span>
 
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 62%"><span
-                                            class="progress-percent"> 62%</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 87%"><span
+                                            class="progress-percent"> 87%</span>
                                     </div>
                                 </div>
                                 <!-- .progress -->
@@ -107,38 +105,38 @@
                             <!-- .skill-progress -->
 
                             <div class="progress-item">
-                                <span class="progress-title">CSS3</span>
+                                <span class="progress-title">C#</span>
+
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="93" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 93%"><span
+                                            class="progress-percent"> 93%</span>
+                                    </div>
+                                </div>
+                                <!-- /.progress -->
+                            </div>
+                            <!-- /.skill-progress -->
+
+                            <div class="progress-item">
+                                <span class="progress-title">Java</span>
+
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="93" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 93%"><span
+                                            class="progress-percent"> 93%</span>
+                                    </div>
+                                </div>
+                                <!-- /.progress -->
+                            </div>
+                            <!-- /.skill-progress -->
+
+                            <div class="progress-item">
+                                <span class="progress-title">JavaScript / TypeScript</span>
 
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
                                             aria-valuemax="100" style="width: 90%"><span
                                             class="progress-percent"> 90%</span>
-                                    </div>
-                                </div>
-                                <!-- /.progress -->
-                            </div>
-                            <!-- /.skill-progress -->
-
-                            <div class="progress-item">
-                                <span class="progress-title">PHP</span>
-
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 75%;"><span
-                                            class="progress-percent"> 75%</span>
-                                    </div>
-                                </div>
-                                <!-- /.progress -->
-                            </div>
-                            <!-- /.skill-progress -->
-
-                            <div class="progress-item">
-                                <span class="progress-title">JavaScript</span>
-
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 55%;"><span
-                                            class="progress-percent"> 55%</span>
                                     </div>
                                 </div>
                                 <!-- /.progress -->
@@ -151,15 +149,13 @@
                     </div>
                     <div class="col-md-6">
                         <div class="progress-wrapper">
-                            <h3>DESIGN TOOLS</h3>
-
                             <div class="progress-item">
-                                <span class="progress-title">Photoshop</span>
+                                <span class="progress-title">NodeJS</span>
 
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 90%"><span
-                                            class="progress-percent"> 90%</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 80%"><span
+                                            class="progress-percent"> 80%</span>
                                     </div>
                                 </div>
                                 <!-- .progress -->
@@ -167,38 +163,38 @@
                             <!-- .skill-progress -->
 
                             <div class="progress-item">
-                                <span class="progress-title">Illustrator</span>
+                                <span class="progress-title">PHP</span>
+
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="89" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 89%"><span
+                                            class="progress-percent"> 89%</span>
+                                    </div>
+                                </div>
+                                <!-- /.progress -->
+                            </div>
+                            <!-- /.skill-progress -->
+
+                            <div class="progress-item">
+                                <span class="progress-title">SQL (MySQL / MSSQL)</span>
+
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 80%"><span
+                                            class="progress-percent"> 80%</span>
+                                    </div>
+                                </div>
+                                <!-- /.progress -->
+                            </div>
+                            <!-- /.skill-progress -->
+
+                            <div class="progress-item">
+                                <span class="progress-title">HTML(5) / CSS(3)</span>
 
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 70%"><span
-                                            class="progress-percent"> 50%</span>
-                                    </div>
-                                </div>
-                                <!-- /.progress -->
-                            </div>
-                            <!-- /.skill-progress -->
-
-                            <div class="progress-item">
-                                <span class="progress-title">Sketch</span>
-
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 75%;"><span
-                                            class="progress-percent"> 75%</span>
-                                    </div>
-                                </div>
-                                <!-- /.progress -->
-                            </div>
-                            <!-- /.skill-progress -->
-
-                            <div class="progress-item">
-                                <span class="progress-title">MACAW</span>
-
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 55%;"><span
-                                            class="progress-percent"> 55%</span>
+                                            aria-valuemax="100" style="width: 90%"><span
+                                            class="progress-percent"> 90%</span>
                                     </div>
                                 </div>
                                 <!-- /.progress -->
@@ -210,6 +206,59 @@
                     </div>
                 </div>
                 <!--.row -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="other-skills">
+                                <p style="font-style: italic">Summary of my technology & tools stack include but are not limited to:</p>
+
+                                <p>
+                                    <span>C</span>,
+                                    <span>C++</span>, 
+                                    <span>C#</span>, 
+                                    <span>Java (EE)</span>,
+                                    <span>Python</span>,
+                                    <span>PHP</span>,
+                                    <span>NodeJS</span>,
+                                    <span>HTML(5)</span>,
+                                    <span>CSS(3)</span>,
+                                    <span>JavaScript</span>,
+                                    <span>TypeScript</span>,
+                                    <span>MSSQL</span>,
+                                    <span>MySQL</span>,
+                                    <span>Lua</span>,
+                                    <span>jQuery</span>,
+                                    <span>XML</span>,
+                                    <span>Android Studio</span>,
+                                    <span>MS Visual Studio</span>,
+                                    <span>PhpMyAdmin</span>,
+                                    <span>SVN</span>,
+                                    <span>TortoiseSVN</span>,
+                                    <span>GitHub</span>,
+                                    <span>Office 365</span>,
+                                    <span>Photoshop</span>,
+                                    <span>Corel Draw</span>,
+                                    <span>MSSQL on Linux</span>,
+                                    <span>UNIX Shell</span>,
+                                    <span>CI</span>,
+                                    <span>Jenkins</span>,
+                                    <span>PowerShell</span>,
+                                    <span>Hyper-V (core)</span>,
+                                    <span>Virtual Machines</span>,
+                                    <span>Remote Desktop</span>,
+                                    <span>SQL Management Studio</span>,
+                                    <span>InnoSetup</span>,
+                                    <span>WordPress</span>,
+                                    <span>MS VS Code</span>,
+                                    <span>JIRA</span>,
+                                    <span>Ubuntu Server</span>,
+                                    <span>Windows Server</span>,
+                                    <span>IoT</span>,
+                                    <span>PCB design</span>
+                                </p>
+                        </div>
+                    </div>
+                </div>
+                <!--.row-->
             </div>
         </div>
 
