--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 </section>
 <!-- .section-education -->
 
-<section class="section-wrapper portfolio-section">
+<!--section class="section-wrapper portfolio-section">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -395,9 +395,7 @@
                                 <h3>Creative concepts</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <a class="portfolio-item" href="#">
@@ -409,9 +407,7 @@
                                 <h3>Customer focused</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <a class="portfolio-item" href="#">
@@ -423,9 +419,7 @@
                                 <h3>Management methodology</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <a class="portfolio-item" href="#">
@@ -437,9 +431,7 @@
                                 <h3>Market research</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <a class="portfolio-item" href="#">
@@ -451,9 +443,7 @@
                                 <h3>Market research</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <a class="portfolio-item" href="#">
@@ -465,17 +455,13 @@
                                 <h3>Market research</h3>
                                 <small>domain.com</small>
                             </div>
-                            <!-- portfolio-info -->
                         </a>
-                        <!-- .portfolio-item -->
                     </div>
                 </div>
             </div>
         </div>
-        <!-- /.row -->
     </div>
-</section>
-<!-- .portfolio -->
+</section-->
 
 <section class="section-languages section-wrapper">
     <div class="container">
