Updated work experience obligations

--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
                                     <span>C++</span>, 
                                     <span>C#</span>, 
                                     <span>Java (EE)</span>,
+                                    <span>JavaScript</span>,
+                                    <span>TypeScript</span>,
                                     <span>Python</span>,
                                     <span>PHP</span>,
                                     <span>NodeJS</span>,
                                     <span>HTML(5)</span>,
                                     <span>CSS(3)</span>,
-                                    <span>JavaScript</span>,
-                                    <span>TypeScript</span>,
                                     <span>MSSQL</span>,
                                     <span>MySQL</span>,
                                     <span>Lua</span>,
@@ -285,11 +285,16 @@
                             <p>Switzerland, Regensdorf</p>
 
                             <ul class="obligations">
-                                <li>Develop Java Web Services and designing UX/UI</li>
-                                <li>Launch and maintenance of SVN, FTP and MSSQL/MySQL database servers</li>
-                                <li>Writing shell scripts on Linux Ubuntu for automatization of MSSQL and MySQL database backup process</li>
-                                <li>Developing certain tools in .NET (C#) from scratch which purposes was to improve quality and speed up building process of company products</li>
-                                <li>Designing databases for several professional applications written in C# and Java</li>
+                                <li>Work on Java backend which include developing custom Web Services using JAX-WS Api and <a href="https://struts.apache.org/" target="_blank">Apache Struts</a> framework.</li>
+                                <li>Modification UX/UI of main company products to improve user friendliness and experience.</li>
+                                <li>Launch and maintenance of SVN, FTP and MSSQL/MySQL database servers under Windows and Linux (Ubuntu) enviroments.</li>
+                                <li>Write Linux shell scripts for MSSQL and MySQL database backup process automatization which include: backup file compression; store to FTP server; and sending report about backup status over email.</li>
+                                <li>Design and develop certain custom CI tools in .NET (C#) from scratch that improves the quality of company products and speed up building process by over 2400%.</li>
+                                <li>Design new, and modificate existed MSSQL / MySQL databases for several applications written in C# and Java. 
+                                    Main purpose of DB modificatoin was to increase the speed, stability and security.
+                                </li>
+                                <li>Create desktop applications (based on <a href="https://electronjs.org/" target="_blank">Electron</a> NodeJS platform) that consumes resources from REST services and display data in User Interface nicely designed by use of HTML, CSS and JavaScript.</li>
+                                <li>Design, develop and implement custom generic system for applications online licensing and updating.</li>
                             </ul>
 
                             <div class="used-tools">
