--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 </div>
 
                 <ul class="social-icon">
-                    <li><a href="https://github.com/abobija" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/bobija" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.youtube.com/scrollerscroller" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                    <li><a href="https://gitlab.com/a.bobija" target="_blank"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/abobija" target="_blank" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/bobija" target="_blank" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.youtube.com/scrollerscroller" target="_blank" title="YouTube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="https://gitlab.com/a.bobija" target="_blank" title="GitLab"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
