--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 </section>
 <!-- .section-education -->
 
-<!--section class="section-wrapper portfolio-section">
+<section class="section-wrapper portfolio-section">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -391,82 +391,89 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=Y_HIbkmJEJ0" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-1.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/Y_HIbkmJEJ0/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Creative concepts</h3>
-                                <small>domain.com</small>
+                                <h3>RC Car Controlled via WiFi</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=YdqVJecZhuM" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-2.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/YdqVJecZhuM/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Customer focused</h3>
-                                <small>domain.com</small>
+                                <h3>Optical (IR) Tachometer</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=9-koPoKR_Zw" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-3.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/9-koPoKR_Zw/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Management methodology</h3>
-                                <small>domain.com</small>
+                                <h3>ESP32 A6 GSM Station</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=3ogx5X3xvPw" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-4.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/3ogx5X3xvPw/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Market research</h3>
-                                <small>domain.com</small>
+                                <h3>ESP8266 RFID Attendance System</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=TH8eR9hSwzc" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-5.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/TH8eR9hSwzc/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Market research</h3>
-                                <small>domain.com</small>
+                                <h3>ESP32 RFID Attendance System</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=HhT2ixEH4cU">
                             <div class="portfolio-thumb">
-                                <img src="img/portfolio-6.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/HhT2ixEH4cU/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>Market research</h3>
-                                <small>domain.com</small>
+                                <h3>REST Service on ESP32</h3>
+                                <small>YouTube</small>
                             </div>
                         </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p style="font-style: italic">
+                            For more projects please visit my <a href="https://www.youtube.com/scrollerscroller" target="_blank">YouTube channel</a>...
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section-->
+</section>
 
 <section class="section-languages section-wrapper">
     <div class="container">
