Link for github profile in portfolio section

--- a/index.html
+++ b/index.html
@@ -465,8 +465,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p style="font-style: italic">
-                            For more projects please visit my <a href="https://www.youtube.com/scrollerscroller" target="_blank">YouTube channel</a>...
+                        <p>
+                            For more projects please visit my <a href="https://github.com/abobija" target="_blank">GitHub profile</a> 
+                            and <a href="https://www.youtube.com/scrollerscroller" target="_blank">YouTube channel</a>.
                         </p>
                     </div>
                 </div>
