--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="favicon.png" rel=icon>
 
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/fa/css/fontawesome.min.css" rel="stylesheet">
+    <link href="css/fa/css/brands.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -68,10 +69,12 @@
                 </div>
 
                 <ul class="social-icon">
-                    <li><a href="https://github.com/abobija" target="_blank" title="GitHub"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/bobija" target="_blank" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.youtube.com/scrollerscroller" target="_blank" title="YouTube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                    <li><a href="https://gitlab.com/a.bobija" target="_blank" title="GitLab"><i class="fa fa-gitlab" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/abobija" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/bobija" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.youtube.com/scrollerscroller" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="https://gitlab.com/a.bobija" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a></li>
+                    <li><a href="https://www.npmjs.com/~abobija" target="_blank" title="npm"><i class="fab fa-npm"></i></a></li>
+                    <li><a href="https://www.hackerrank.com/bobija_alija" target="_blank" title="HackerRank"><i class="fab fa-hackerrank"></i></a></li>
                 </ul>
             </div>
         </div>
