fa solid and regular icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
     <link href="css/fa/css/fontawesome.min.css" rel="stylesheet">
     <link href="css/fa/css/brands.min.css" rel="stylesheet">
+    <link href="css/fa/css/solid.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -368,7 +369,7 @@
                             <h3>Electrical Technician of Computer Science and Automation</h3>
                             <h4>High School of Electrical Engineering</h4>
                             <p>Bosnia and Herzegovina, Bihać</p>
-                            <p><i class="fa fa-trophy"></i> Achivement: "Student of Generation"</p>
+                            <p><i class="fas fa-trophy"></i> Achivement: "Student of Generation"</p>
                         </div>
                     </div>
                 </div>
