Updated portfolio project links

--- a/index.html
+++ b/index.html
@@ -401,20 +401,20 @@
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>RC Car Controlled via WiFi</h3>
-                                <small>YouTube</small>
+                                <h3>ESP8266 Wireless Car</h3>
+                                <small>RC Car Controlled via WiFi</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=YdqVJecZhuM" target="_blank">
+                        <a class="portfolio-item" href="https://github.com/abobija/dc-motor-pwm-regulation#dc-motor-pwm-regulation" target="_blank">
                             <div class="portfolio-thumb">
                                 <img src="https://img.youtube.com/vi/YdqVJecZhuM/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
                                 <h3>Optical (IR) Tachometer</h3>
-                                <small>YouTube</small>
+                                <small>DC Motor PWM Speed Regulation</small>
                             </div>
                         </a>
                     </div>
@@ -426,43 +426,43 @@
 
                             <div class="portfolio-info">
                                 <h3>ESP32 A6 GSM Station</h3>
-                                <small>YouTube</small>
+                                <small>Control Devices with SMS</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=3ogx5X3xvPw" target="_blank">
+                        <a class="portfolio-item" href="https://github.com/abobija/rfid32#rfid32" target="_blank">
                             <div class="portfolio-thumb">
-                                <img src="https://img.youtube.com/vi/3ogx5X3xvPw/sddefault.jpg" alt="">
+                                <img src="https://img.youtube.com/vi/U7DM8_piRBA/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>ESP8266 RFID Attendance System</h3>
-                                <small>YouTube</small>
+                                <h3>RFID32</h3>
+                                <small>Interfacing ESP32 with MFRC522</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=TH8eR9hSwzc" target="_blank">
+                        <a class="portfolio-item" href="https://github.com/abobija/wiattend#wiattend" target="_blank">
                             <div class="portfolio-thumb">
                                 <img src="https://img.youtube.com/vi/TH8eR9hSwzc/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>ESP32 RFID Attendance System</h3>
-                                <small>YouTube</small>
+                                <h3>WiAttend</h3>
+                                <small>ESP32 RFID Attendance System</small>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <a class="portfolio-item" href="https://www.youtube.com/watch?v=HhT2ixEH4cU">
+                        <a class="portfolio-item" href="https://github.com/abobija/api32#api32">
                             <div class="portfolio-thumb">
                                 <img src="https://img.youtube.com/vi/HhT2ixEH4cU/sddefault.jpg" alt="">
                             </div>
 
                             <div class="portfolio-info">
-                                <h3>REST Service on ESP32</h3>
-                                <small>YouTube</small>
+                                <h3>Api32</h3>
+                                <small>ESP32 REST Service</small>
                             </div>
                         </a>
                     </div>
