Increased font size

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <small>BIRTH</small>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="personal-details">
                             <strong>BOSNIA AND HERZEGOVINA</strong>
                             <small>NATIONALITY</small>
@@ -414,7 +414,7 @@
 
                             <div class="portfolio-info">
                                 <h3>Optical (IR) Tachometer</h3>
-                                <small>DC Motor PWM Speed Regulation</small>
+                                <small>PWM Speed Regulation</small>
                             </div>
                         </a>
                     </div>
