Added docker icon/link

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <li><a href="https://gitlab.com/a.bobija" target="_blank" title="GitLab"><i class="fab fa-gitlab"></i></a></li>
                     <li><a href="https://www.npmjs.com/~abobija" target="_blank" title="npm"><i class="fab fa-npm"></i></a></li>
                     <li><a href="https://www.hackerrank.com/bobija_alija" target="_blank" title="HackerRank"><i class="fab fa-hackerrank"></i></a></li>
+                    <li><a href="https://hub.docker.com/u/abobija" target="_blank" title="Docker"><i class="fab fa-docker"></i></a></li>
                 </ul>
             </div>
         </div>
