--- a/index.html
+++ b/index.html
@@ -214,22 +214,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="other-skills">
-                                <p style="font-style: italic">Summary of my technology & tools stack include but are not limited to:</p>
+                                <p style="font-style: italic">My additional technology & tools stack include but are not limited to:</p>
 
                                 <p>
-                                    <span>C</span>,
-                                    <span>C++</span>, 
-                                    <span>C#</span>, 
-                                    <span>Java (EE)</span>,
-                                    <span>JavaScript</span>,
-                                    <span>TypeScript</span>,
                                     <span>Python</span>,
-                                    <span>PHP</span>,
-                                    <span>NodeJS</span>,
-                                    <span>HTML(5)</span>,
-                                    <span>CSS(3)</span>,
-                                    <span>MSSQL</span>,
-                                    <span>MySQL</span>,
                                     <span>Lua</span>,
                                     <span>jQuery</span>,
                                     <span>XML</span>,
@@ -258,7 +246,7 @@
                                     <span>Ubuntu Server</span>,
                                     <span>Windows Server</span>,
                                     <span>IoT</span>,
-                                    <span>PCB design</span>
+                                    <span>PCB design</span>.
                                 </p>
                         </div>
                     </div>
