Update work experience

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
                                 </li>
                                 <li>Create desktop applications (based on <a href="https://electronjs.org/" target="_blank">Electron</a> NodeJS platform) that consumes resources from REST services and display data in User Interface nicely designed by use of HTML, CSS and JavaScript.</li>
                                 <li>Design, develop and implement custom generic system for applications online licensing and updating.</li>
+                                <li>Develop Windows Service in C# which purpose was to automatically backup MSSQL database in specific user-defined moments.</li>
                             </ul>
 
                             <div class="used-tools">
