meta author, keywords

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alija Bobija</title>
+
+    <meta name="author" content="Alija Bobija">
     <meta name="description" content="My name is Alija Bobija. I am software engineer. In my free time I love to play with embedded electronics and share my knowledge by making video tutorials.">
+    <meta name="keywords" content="Alija,Bobija,senior,software,engineer,programmer,developer,java,c#,python,php,javascript,html,css">
 
     <link href="favicon.png" rel=icon>
 
