--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <span>Senior Software Engineer</span>
                 </div>
                 <p>
+                    Hello World! My name is Alija Bobija.
                     I am passionate about what I do and always give 99%.
                     With 7 years of freelancing and 4+ years as professional software engineer I'm
                     experienced in developing applications and solutions for a wide range of use.
