Updated tool stack

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                                     <span>Photoshop</span>,
                                     <span>Corel Draw</span>,
                                     <span>MSSQL on Linux</span>,
+                                    <span>NoSQL (MongoDB)</span>,
                                     <span>UNIX Shell</span>,
                                     <span>CI</span>,
                                     <span>Jenkins</span>,
