Added Maven and Docker to the tool stack

--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
                                     <span>Android Studio</span>,
                                     <span>MS Visual Studio</span>,
                                     <span>PhpMyAdmin</span>,
+                                    <span>Maven</span>,
+                                    <span>Docker</span>,
                                     <span>SVN</span>,
                                     <span>TortoiseSVN</span>,
                                     <span>GitHub</span>,
