--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="I'm just tryin' to make stuff simpler, as much as I can. Ok, coffee?">
     <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
     <div class="hello">
