--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
     <div class="hello">
         <p>Hi there!</p>
 
-        <p>You can support me by subscribing to my <a href="https://youtube.com/AlijaBobija">YouTube channel</a>. There I publish some cool stuff about programming, electronics and diy.</p>
-
         <p>Here is my <a href="https://github.com/abobija">GitHub</a> and <a href="https://www.linkedin.com/in/bobija">LinkedIn</a> profiles.</p>
 
-        <p>Thanks!</p>
+        <p>You can support me by subscribing to my <a href="https://youtube.com/AlijaBobija">YouTube channel</a>. There I publish some cool stuff about programming, electronics and diy.</p>
+
+        <p>
+            Get in touch with me:<br />
+            <strong><span id="caddr"></span></strong>
+        </p>
 
         <p class="regards">
             Best regards,<br />
             Alija Bobija
         </p>
     </div>
+
+    <script type="application/javascript" src="script.js"></script>
 </body>
 </html>
