--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="hello">
-        <p>Hi there!</p>
+        <p>Hi there! 👋</p>
 
         <p>Here is my <a href="https://github.com/abobija">GitHub</a> and <a href="https://www.linkedin.com/in/bobija">LinkedIn</a> profiles.</p>
 
