--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="hello">
-        <p>Hi there! 👋</p>
+        <p>Hi there! &#128075;&#127996;</p>
 
         <p>Here is my <a href="https://github.com/abobija">GitHub</a> and <a href="https://www.linkedin.com/in/bobija">LinkedIn</a> profiles.</p>
 
@@ -20,6 +20,10 @@
         <p>
             Get in touch with me:<br />
             <strong><span id="caddr"></span></strong>
+        </p>
+
+        <p>
+            &#9749;?
         </p>
 
         <p class="regards">
