--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
     <div class="hello">
-        <p>Hi there! &#128075;&#127996;</p>
-
-        <p>Here is my <a href="https://github.com/abobija">GitHub</a> and <a href="https://www.linkedin.com/in/bobija">LinkedIn</a> profiles.</p>
-
-        <p>You can support me by subscribing to my <a href="https://youtube.com/AlijaBobija">YouTube channel</a>. There I publish some cool stuff about programming, electronics and diy.</p>
+        <h1>
+            Hi,<br />
+            it's Alija
+        </h1>
 
         <p>
-            Get in touch with me:<br />
+            <span style="display: block; font-size: 70%;">Contact:</span>
             <strong><span id="caddr"></span></strong>
         </p>
 
         <p>
-            &#9749;?
+            <a href="https://youtube.com/AlijaBobija" class="r-link">YouTube</a> 
+            ... <a href="https://github.com/abobija" class="r-link">GitHub</a> 
+            ... <a href="https://www.linkedin.com/in/bobija" class="r-link">LinkedIn</a>
         </p>
 
-        <p class="regards">
-            Best regards,<br />
-            Alija Bobija
+        <p class="regards" style="margin-top: 120px">
+            Cheers!
         </p>
     </div>
 
