--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
         </p>
 
         <p>
-            <a href="https://youtube.com/AlijaBobija" class="r-link">YouTube</a> 
-            ... <a href="https://github.com/abobija" class="r-link">GitHub</a> 
-            ... <a href="https://www.linkedin.com/in/bobija" class="r-link">LinkedIn</a>
+            <div class="g-ytsubscribe" data-channelid="UCzh3Yw1KNcbXUHOBK_AzquQ" data-layout="full" data-count="default"></div>
+        </p>
+
+        <p>
+            <a href="https://github.com/abobija">
+                <img src="https://img.shields.io/github/followers/abobija.svg?style=for-the-badge&label=GitHub&maxAge=2592000&logo=github" />
+            </a>
+        </p>
+
+        <p>
+            <a href="https://www.linkedin.com/in/bobija" class="r-link">LinkedIn</a>
         </p>
 
         <p class="regards" style="margin-top: 120px">
@@ -33,5 +41,6 @@
     </div>
 
     <script type="application/javascript" src="script.js"></script>
+    <script src="https://apis.google.com/js/platform.js"></script>
 </body>
 </html>
