Removed old content

--- a/index.html
+++ b/index.html
@@ -5,42 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alija Bobija</title>
     <meta name="description" content="I'm just tryin' to make stuff simpler, as much as I can. Ok, coffee?">
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/style.css">
     <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
-    <div class="hello">
-        <h1>
-            Hi,<br />
-            it's Alija
-        </h1>
-
-        <p>
-            <span style="display: block; font-size: 70%;">Contact:</span>
-            <strong><span id="caddr"></span></strong>
-        </p>
-
-        <p>
-            <div class="g-ytsubscribe" data-channelid="UCzh3Yw1KNcbXUHOBK_AzquQ" data-layout="full" data-count="default"></div>
-        </p>
-
-        <p>
-            <a href="https://github.com/abobija">
-                <img src="https://img.shields.io/github/followers/abobija.svg?style=for-the-badge&label=GitHub&maxAge=2592000&logo=github" />
-            </a>
-        </p>
-
-        <p>
-            <a href="https://www.linkedin.com/in/bobija" class="r-link">LinkedIn</a>
-        </p>
-
-        <p class="regards" style="margin-top: 120px">
-            Cheers!
-        </p>
-    </div>
-
-    <script type="application/javascript" src="script.js"></script>
-    <script src="https://apis.google.com/js/platform.js"></script>
+    Hi. It's Alija.
 </body>
 </html>
