--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Alija Bobija</title>
-    <meta name="description" content="I'm just tryin' to make stuff simpler, as much as I can. Ok, coffee?">
+    <meta name="description" content="I'm just trying to simplify things, as much as I can. Ok, coffee?">
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <div class="hello">
-        <h1>
-            Hi,<br />
-            it's Alija
-        </h1>
 
-        <p>
-            <span style="display: block; font-size: 70%;">Contact:</span>
-            <strong><span id="caddr"></span></strong>
-        </p>
-
-        <p>
-            <div class="g-ytsubscribe" data-channelid="UCzh3Yw1KNcbXUHOBK_AzquQ" data-layout="full" data-count="default"></div>
-        </p>
-
-        <p>
-            <a href="https://github.com/abobija">
-                <img src="https://img.shields.io/github/followers/abobija.svg?style=for-the-badge&label=GitHub&maxAge=2592000&logo=github" />
-            </a>
-        </p>
-
-        <p>
-            <a href="https://www.linkedin.com/in/bobija" class="r-link">LinkedIn</a>
-        </p>
-
-        <p class="regards" style="margin-top: 120px">
-            Cheers!
-        </p>
-    </div>
-
-    <script src="./script.js"></script>
-    <script src="https://apis.google.com/js/platform.js"></script>
+<body class="grid min-vh-100">
+    <main class="container min-vh-100 d-flex justify-content-center align-items-center text-center">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-3 handwriting text-primary">Alija Bobija</h1>
+                <p class="lead">
+                    I'm just trying to simplify things, as much as I can.
+                </p>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
