Added font awesome social icons

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Alija Bobija</title>
     <meta name="description" content="I'm just trying to simplify things, as much as I can. Ok, coffee?">
     <link rel="icon" type="image/png" href="./img/favicon.png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="grid min-vh-100">
@@ -18,9 +18,19 @@
                 <p class="lead">
                     I'm just trying to simplify things, as much as I can.
                 </p>
+                <p class="social">
+                    <a href="https://youtube.com/AlijaBobija" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://github.com/abobija" target="_blank" ><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/bobija" target="_blank"><i class="fab fa-linkedin"></i></a>
+                </p>
+                <p class="social">
+                    <a id="email" href="#"><i class="fas fa-envelope"></i></a>
+                </p>
             </div>
         </div>
     </main>
+
+    <script type="application/javascript" src="./js/script.js"></script>
 </body>
 
 </html>
