--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,15 @@
             <div class="col">
                 <h1 class="display-3 handwriting text-primary">Alija Bobija</h1>
                 <p class="lead">
-                    I'm just trying to simplify things, as much as I can.
+                    <!--I'm just trying to simplify things, as much as I can.-->
                 </p>
                 <p class="social">
-                    <a href="https://youtube.com/AlijaBobija" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://github.com/abobija" target="_blank" ><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/bobija" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a title="YouTube" href="https://youtube.com/AlijaBobija" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a title="GitHub" href="https://github.com/abobija" target="_blank" ><i class="fab fa-github"></i></a>
+                    <a title="LinkedIn" href="https://www.linkedin.com/in/bobija" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </p>
                 <p class="social">
-                    <a id="email" href="#"><i class="fas fa-envelope"></i></a>
+                    <a title="E-Mail" id="email" href="#"><i class="fas fa-envelope"></i></a>
                 </p>
             </div>
         </div>
