Update description tag

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Alija Bobija</title>
     <meta name="author" content="Alija Bobija">
-    <meta name="description" content="I'm just a person who uses his software engineering skills to simplify and automate things while in the meantime drinks a coffee.">
+    <meta name="description" content="Just a person who uses his skills to simplify and automate things.">
     <meta name="keywords" content="Alija, Bobija, abobija, software, engineer, development, programming, automation, iot, electronics, c, c++, c#, java, python, arduino, esp-idf, esp32, esp8266, raspberry, pi, math, mechanics, physics">
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
